--- a/_028-Junit5-app/pom.xml
+++ b/_028-Junit5-app/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.piolig.junitapp</groupId>
     <artifactId>_028-Junit5-app</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -16,6 +16,18 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <groups>account</groups>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
