--- a/_33-webapp-cookies/pom.xml
+++ b/_33-webapp-cookies/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.piolig.apiservlet.webapp.cookies</groupId>
-    <artifactId>webapp-cookies</artifactId>
+    <artifactId>webapp-cookie</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
